@@ -33,7 +33,7 @@ Dist::Zilla::Plugin::PodSyntaxTests = 5.040
 Dist::Zilla::Plugin::PodCoverageTests = 5.040
 Dist::Zilla::Plugin::Test::PodSpelling = 2.006003
 ;Dist::Zilla::Plugin::Test::Pod::LinkCheck = 0
-Dist::Zilla::Plugin::Test::Pod::No404s = 1.002
+Dist::Zilla::Plugin::Test::Pod::No404s = 1.003
 Dist::Zilla::Plugin::Test::Kwalitee = 2.10
 Dist::Zilla::Plugin::MojibakeTests = 0.8
 Dist::Zilla::Plugin::Test::ReportPrereqs = 0.022
